--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,6 @@
 {deps, [
       {folsom, ".*", {git, "git://github.com/boundary/folsom", master}},
-      {webmachine, ".*", {git, "git://github.com/basho/webmachine", {tag, "1.9.2"}}},
-      {ibrowse, ".*", {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v4.0.1"}}}
+      {webmachine, ".*", {git, "git://github.com/basho/webmachine", master}}
   ]}.
 {erl_opts, [debug_info]}.
 {cover_enabled, true}.
