no need for ibrowse anymore as now part of webmachine

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{require}.
 {deps, [
       {folsom, ".*", {git, "git://github.com/boundary/folsom", master}},
       {webmachine, ".*", {git, "git://github.com/basho/webmachine", master}}
