make project otp releasable, rename sanity_test and include script as par tof release

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
-{require}.
 {deps, [
       {folsom, ".*", {git, "git://github.com/boundary/folsom", master}},
       {webmachine, ".*", {git, "git://github.com/basho/webmachine", master}}
   ]}.
+{lib_dirs, ["deps"]}.
+{sub_dirs, ["rel"]}.
 {erl_opts, [debug_info]}.
 {cover_enabled, true}.
