--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -31,6 +31,8 @@
        {app, kernel, [{incl_cond, include}]},
        {app, crypto, [{incl_cond, include}]},
        {app, inets, [{incl_cond, include}]},
+       {app, ibrowse, [{incl_cond, include}]},
+       {app, bear, [{incl_cond, include}]},
        {app, mochiweb, [{incl_cond, include}]},
        {app, webmachine, [{incl_cond, include}]},
        {app, folsom, [{incl_cond, include}]},
