--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,6 @@
+{require_otp_vsn, "R?1[67]"}.
+{erl_opts, [debug_info,
+            {i, ["include"]}, smp]}.
 {deps, [
       {folsom, ".*", {git, "git://github.com/boundary/folsom", master}},
       {webmachine, ".*", {git, "git://github.com/basho/webmachine", master}}
