Need xmerl as part of release mochijson2 needs it. Update test script for Quering Reachable Erlang node, all script need erlang node start as longname. Check query string for input parameter, if absent local node is the default value which is the old behaviour.

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {erl_opts, [debug_info,
             {i, ["include"]}, smp]}.
 {deps, [
-      {folsom, ".*", {git, "git://github.com/boundary/folsom", master}},
+      {folsom, ".*", {git, "git://github.com/linearregression/folsom", master}},
       {webmachine, ".*", {git, "git://github.com/basho/webmachine", master}}
   ]}.
 {lib_dirs, ["deps"]}.
