--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -30,6 +30,7 @@
        {app, stdlib, [{incl_cond, include}]},
        {app, kernel, [{incl_cond, include}]},
        {app, crypto, [{incl_cond, include}]},
+       {app, xmerl, [{incl_cond, include}]},
        {app, inets, [{incl_cond, include}]},
        {app, ibrowse, [{incl_cond, include}]},
        {app, bear, [{incl_cond, include}]},
